fix(drawer): Should hide persistent drawer when collapsed (#899)
Closes #731

--- a/src/theme/extend/mdc-drawer.scss
+++ b/src/theme/extend/mdc-drawer.scss
@@ -3,3 +3,11 @@
   height: 100vh;
   overflow-y: auto;
 }
+
+.mdc-drawer--persistent:not(.mdc-drawer--open) {
+  display: none;
+}
+
+.mdc-drawer--persistent {
+  display: inline-flex;
+}
